finalizando download progressive

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mvc.async.request-timeout=0
 
 
 # Configuração do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://192.168.56.56:5432/financeiro
+spring.datasource.url=jdbc:postgresql://localhost:5410/pacsdb
 spring.datasource.username=postgres
-spring.datasource.password=3218
+spring.datasource.password=321852
 spring.datasource.driver-class-name=org.postgresql.Driver
